fixed z-index issue with modal and survey logo

--- a/src/PrivacyPolicy.css
+++ b/src/PrivacyPolicy.css
@@ -8,6 +8,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  z-index: 9999;
 }
 
 .modal-content {
@@ -18,6 +19,7 @@
   width: 50%;
   overflow: scroll;
   background-color: #112848;
+  z-index: 9999;
 }
 
 .modal-content h2 {
